After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777203 - gnulib license information is not correct in glib2.0
gnulib license information is not correct in glib2.0
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2017-01-13 05:46 UTC by leomar.rnd
Modified: 2017-03-09 17:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Regenerate the vasnprintf gnulib module imported files (11.44 KB, patch)
2017-03-09 00:17 UTC, Emmanuele Bassi (:ebassi)
none Details | Review
Regenerate the vasnprintf gnulib module imported files (13.99 KB, patch)
2017-03-09 16:45 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description leomar.rnd 2017-01-13 05:46:10 UTC
GPLv3 header file is presnt in in glib 2.48
https://github.com/GNOME/glib/blob/master/glib/gnulib/verify.h
and this file in included in 
https://github.com/GNOME/glib/blob/master/glib/gnulib/vasnprintf.c
which makes glib2.0 package as GPLv3.

Above issue was discussed in this tread 
https://mail.gnome.org/archives/gtk-devel-list/2016-December/msg00024.html

As per this discussion, licensing information is wrongly updated as GPLv3 for glib/gnulib/verify.h and needs to be fixed.
Comment 1 A. Walton 2017-03-08 22:55:32 UTC
This could definitely use some maintainership attention - our lawyers turned this up during a routine pre-release check and it might block us if we can't come to a resolution - we might be stuck reverting to an older glib.
Comment 2 Emmanuele Bassi (:ebassi) 2017-03-09 00:17:14 UTC
Created attachment 347516 [details] [review]
Regenerate the vasnprintf gnulib module imported files

Use gnulibg-tool --lgpl to import the vasnprintf module using the
correct GNU Lesser General Public License, version 2.1 or later, like
the rest of GLib.
Comment 3 Emmanuele Bassi (:ebassi) 2017-03-09 16:45:23 UTC
Created attachment 347568 [details] [review]
Regenerate the vasnprintf gnulib module imported files

Use gnulibg-tool --lgpl to import the vasnprintf module using the
correct GNU Lesser General Public License, version 2.1 or later, like
the rest of GLib.
Comment 4 Emmanuele Bassi (:ebassi) 2017-03-09 16:48:01 UTC
I've re-imported the files, and kept all the changes from commit 212e4232e7520b2e328e3e965ed792e17b12e144 (see bug 756382) except for the newly added annotation for pure functions when using GCC ≥ 3, which seemed appropriate and it's not going to hurt.

The re-import also ensures that all the files are marked as using the Lesser General Public License version 2.1 or later, instead of a mix of Library GPL v2 and Lesser GPL v2.1.
Comment 5 Philip Withnall 2017-03-09 16:57:30 UTC
Review of attachment 347568 [details] [review]:

Yes.
Comment 6 Emmanuele Bassi (:ebassi) 2017-03-09 17:19:39 UTC
Attachment 347568 [details] pushed as c689039 - Regenerate the vasnprintf gnulib module imported files